--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="google_maps_key">AIzaSyBEm_j_bcGVYTQ_xda6cqpWNmjXxDq3KT0</string>
+    <string name="link">Link</string>
 </resources>
